--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,6 @@
-PORT =  8000
-MONGODB_URI = mongodb+srv://aakib02:SvwC62RpeboPx33c@cluster0.mf04f.mongodb.net/job-portal
+PORT=8000
+MONGODB_URI=mongodb+srv://aakib02:SvwC62RpeboPx33c@cluster0.mf04f.mongodb.net/job-portal
+CLOUDINARY_CLOUD_NAME = dbhfcodii,
+CLOUDINARY_API_KEY = 624811798374121,
+CLOUDINARY_API_SECRET= 9g4Adiv7Xsxh_-cV0AT3pdRkrpo
+JWT_SECRET_STRING = "this is my secret string"
