--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -17,7 +17,8 @@
     "react-hook-form": "^7.54.1",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.0.2"
+    "react-router-dom": "^7.0.2",
+    "tailwind-scrollbar-hide": "^2.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
